--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 gnutls28 (3.4.10-4ubuntu1~precise0+exo1) precise; urgency=medium
 
   * Backport to Precise.
+    - Lossen debhelper dependency. Restore -dbg package.
 
  -- Vincent Bernat <bernat@debian.org>  Thu, 14 Apr 2016 19:44:56 +0200
 
