--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ gnutls28 (3.4.10-4ubuntu1~precise0+exo1) precise; urgency=medium
     - Remove PCKS#11 support.
     - Loosen dependency on autogen, not needed if we don't care about
       reproducibility.
+    - Loosen dependency on libgmp.
 
  -- Vincent Bernat <bernat@debian.org>  Thu, 14 Apr 2016 19:44:56 +0200
 
