--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnutls28 (3.4.10-4ubuntu1~precise0+exo3) precise; urgency=medium
+
+  * Remove dependency on libgnutls-deb0-28 for -dbg package.
+
+ -- Vincent Bernat <bernat@debian.org>  Fri, 10 Jun 2016 11:10:59 +0200
+
 gnutls28 (3.4.10-4ubuntu1~precise0+exo2) precise; urgency=medium
 
   * Ensure coinstallability with libgnutls28 by removing unneeded conflict
